# Aion-Protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/ui/: button.tsx  features-4.tsx  footer.tsx  light-beams.tsx  radial-orbital-timeline-demo.tsx  radial-orbital-timeline.tsx
docs/: PROTOCOL.md
programs/consensus/: Cargo.toml
programs/consensus/src/: entrypoint.rs  lib.rs
programs/emissions/: Cargo.toml
programs/emissions/src/: entrypoint.rs  lib.rs
programs/hive/: Cargo.toml
programs/hive/src/: entrypoint.rs  lib.rs
programs/registry/: Cargo.toml
programs/registry-native/: Cargo.toml
programs/registry-native/src/: error.rs  instruction.rs  lib.rs  state.rs
programs/registry/src/: entrypoint.rs  lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: entrypoint.rs  lib.rs
scripts/: deploy-now.sh  deploy-testnet.sh  deploy-testnet.ts  generate-keypair.ts  import-wallet-simple.sh  import-wallet.ts  install-solana-alternative.sh  quick-setup.sh  setup-keypair.sh
shared/: Cargo.toml
shared/src/: lib.rs
tests/: run-all.ts
tests/clients/: registry-client.ts
tests/integration/: registry.test.ts
tests/unit/: serialization.test.ts
tests/utils/: test-utils.ts
