[workspace]
members = [
    "programs/registry",
    "programs/staking",
    "programs/consensus",
    "programs/emissions",
    "programs/hive",
    "shared",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

