[package]
name = "poi-registry-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poi_registry_native"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "~2.0"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "~2.0"
solana-sdk = "~2.0"
tokio = { version = "~1", features = ["full"] }

