[package]
name = "poi-staking"
version = "0.1.0"
description = "Proof-of-Intelligence Staking Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poi_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"

